--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -16,7 +16,7 @@ highlight : tomorrow
 
 theme-override: PITCHME.css
 
-logo : assets/images/logo.png
+logo : images/logo.png
 logo-position : top-left
 
 layout : center
